5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1602_2049.log
== TEST (2019-03-20 19:21:00) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x/y)
print("resto", x//y)

-- OUTPUT:
dividendo:  8
divisor  5
quociente  1.6
resto 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:42) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x/y)
print("resto", x5y)

-- EXECUTION TIME:
0.108284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 6, in <module>
    print("resto", x5y)
NameError: name 'x5y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:21:46) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto", x5y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("resto", x5y)
NameError: name 'x5y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:49) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto", x5y)

-- EXECUTION TIME:
0.128959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 6, in <module>
    print("resto", x5y)
NameError: name 'x5y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:57) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto", x%y)

-- EXECUTION TIME:
0.220939
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dividendo:  8
divisor  5
quociente  1
resto 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dividendo:  14
divisor  2
quociente  7
resto 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dividendo:  347
divisor  2
quociente  173
resto 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:01) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto", x%y)

-- OUTPUT:
dividendo:  8
divisor  5
quociente  1
resto 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:11) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto", x%y)

-- EXECUTION TIME:
0.160313
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dividendo:  8
divisor  5
quociente  1
resto 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dividendo:  14
divisor  2
quociente  7
resto 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dividendo:  347
divisor  2
quociente  173
resto 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:18) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto ", x%y)

-- EXECUTION TIME:
0.143275
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dividendo:  8
divisor  5
quociente  1
resto  3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dividendo:  14
divisor  2
quociente  7
resto  0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dividendo:  347
divisor  2
quociente  173
resto  1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:20) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print("dividendo: ",x)
print("divisor ",y)
print("quociente ",x//y)
print("resto ", x%y)

-- OUTPUT:
dividendo:  8
divisor  5
quociente  1
resto  3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:39) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))
print(x)
print(y)
print(x//y)
print( x%y)

-- EXECUTION TIME:
0.177067
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
